--- a/overtime.htm
+++ b/overtime.htm
@@ -215,6 +215,6 @@
     </select>
     <br>
     <button id="submitButton" onclick="submitLeave()">送出加班申請</button>
-    <p id="status" style="white-space: nowrap; overflow-x: auto; display: block; width: 100%;"></p>
+    <p id="status" style="white-space: nowrap; overflow-x: scroll; display: block; width: 100%;"></p>
 </body>
 </html>
