--- a/excuse.htm
+++ b/excuse.htm
@@ -201,6 +201,6 @@
     </select>
     <br>
     <button id="submitButton" onclick="submitLeave()">送出請假申請</button>
-    <p id="status"></p>
+    <p id="status" style="white-space: nowrap; overflow-x: scroll; display: block; width: 100%;"></p>
 </body>
 </html>
