--- a/index.htm
+++ b/index.htm
@@ -11,8 +11,7 @@
         const TK = hexToString(TK_HEX);
 		const ALLOWED_LOCATIONS = [
 			{ name: "台北公司", lat: 24.986794380363925, lon: 121.5336918999006 },
-			{ name: "豐原", lat: 24.242773932507596, lon: 120.72087978039121 },
-			{ name: "后里", lat: 24.308429969633366, lon: 120.73576330622616 },
+			{ name: "后里美光", lat: 24.308429969633366, lon: 120.73576330622616 },
 		];
 		// 計算兩點間距離（Haversine）
 		function distance(lat1, lon1, lat2, lon2) {
