--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,8 @@
         const TK = hexToString(TK_HEX);
 		const ALLOWED_LOCATIONS = [
 			{ name: "台北公司", lat: 24.986794380363925, lon: 121.5336918999006 },
-			{ name: "后里美光", lat: 24.308429969633366, lon: 120.73576330622616 },
+			{ name: "台中辦公室", lat: 24.310777911896015, lon: 120.72138183688088 },
+			{ name: "后里美光", lat: 24.318140260826873, lon: 120.72406839843525 },
 		];
 		// 計算兩點間距離（Haversine）
 		function distance(lat1, lon1, lat2, lon2) {
