--- a/index.htm
+++ b/index.htm
@@ -50,21 +50,36 @@
             return str;
         }
 
-	function checkBrowser() {
-	    if (/Line/i.test(navigator.userAgent) && /Android/i.test(navigator.userAgent)) {
-	        // 顯示提示畫面
-	        document.body.innerHTML = `
-	          <div style="text-align:center; padding:40px; font-size:18px;">
-	            <p>📍本打卡系統需使用 GPS<br>請點擊下方按鈕，改用手機瀏覽器開啟</p>
-	            <a href="${location.href}" target="_blank"
-	               style="display:inline-block; margin-top:20px; padding:12px 24px; background:#007AFF; color:white; text-decoration:none; border-radius:8px;">
-	              👉 在瀏覽器中開啟
-	            </a>
-	          </div>
-	        `;
+	function isLine() {
+	    return /Line/i.test(navigator.userAgent);
+	}
+	
+	function isAndroid() {
+	    return /Android/i.test(navigator.userAgent);
+	}
+	
+	function isIOS() {
+	    return /iPhone/i.test(navigator.userAgent);
+	}
+	
+	function openExternalBrowserAndroid(url) {
+	    // 嘗試透過 Intent 開啟外部瀏覽器（Chrome 為例）
+	    location.href = `intent://${url.replace(/^https?:\/\//, '')}#Intent;scheme=https;package=com.android.chrome;end`;
+	}
+	
+	function checkEntry() {
+	    if (!isLine()) {
+	        document.body.innerHTML = "<p style='color:red;'>請由 LINE 開啟本頁面</p>";
 	        return;
 	    }
-	    fetchLocation(); // 其他情況正常執行
+	
+	    if (isIOS()) {
+	        fetchLocation(); // 你的定位流程
+	    } else if (isAndroid()) {
+	        openExternalBrowserAndroid("https://ambercoltd.github.io/checkin");
+	    } else {
+	        document.body.innerHTML = "<p style='color:red;'>不支援的裝置</p>";
+	    }
 	}
 
         function fetchLocation() {
@@ -184,7 +199,7 @@
             }
         }
 
-        window.onload = checkBrowser;
+        window.onload = checkEntry;
     </script>
 </head>
 <body>
