--- a/index.htm
+++ b/index.htm
@@ -76,7 +76,7 @@
 	    if (isIOS()) {
 	        fetchLocation(); // 你的定位流程
 	    } else if (isAndroid()) {
-	        openExternalBrowserAndroid("https://ambercoltd.github.io/checkin");
+	        openExternalBrowserAndroid("https://ambercoltd.github.io/CheckIn");
 	    } else {
 	        document.body.innerHTML = "<p style='color:red;'>不支援的裝置</p>";
 	    }
