--- a/index.htm
+++ b/index.htm
@@ -76,7 +76,15 @@
 	    if (isIOS()) {
 	        fetchLocation(); // 你的定位流程
 	    } else if (isAndroid()) {
-	        openExternalBrowserAndroid("https://ambercoltd.github.io/CheckIn");
+		 document.body.innerHTML = `
+	          <div style="text-align:center; padding:40px; font-size:18px;">
+	            <p>📍本打卡系統需使用 GPS<br>請點擊下方按鈕，改用手機瀏覽器開啟</p>
+	            <a href="javascript:openExternalBrowserAndroid('https://ambercoltd.github.io/CheckIn');"
+	               style="display:inline-block; margin-top:20px; padding:12px 24px; background:#007AFF; color:white; text-decoration:none; border-radius:8px;">
+	              👉 Android請點這開啟
+	            </a>
+	          </div>
+	        `;
 	    } else {
 	        document.body.innerHTML = "<p style='color:red;'>不支援的裝置</p>";
 	    }
