--- a/excuse.htm
+++ b/excuse.htm
@@ -97,7 +97,7 @@
             formData.append("_subject", `${name} ${startTime} 假單送簽`);
             formData.append("_captcha", "false");
             formData.append("message", msg);
-			#eason@amberco.com.tw
+		//eason@amberco.com.tw
             fetch(`https://formsubmit.co/${master}`, {
                 method: "POST",
                 body: formData
