--- a/excuse.htm
+++ b/excuse.htm
@@ -159,9 +159,10 @@
     <h2>請假系統</h2>
     <label>主管：</label>
     <select id="master">
-        <option value="tokimusic@gmail.com">A</option>
-        <option value="toki.music@gmail.com">B</option>
-        <option value="lizard@air-rex.com.tw">C</option>
+        <option value="marshall@amberco.com.tw">黃灝</option>
+        <option value="Karen@amberco.com.tw">劉庚庚</option>
+        <option value="eason@amberco.com.tw">蔡一誠</option>
+        <option value="tokimusic@gmail.com">陳昕逸</option>
     </select>
     <label>假別：</label>
     <select id="leaveType">
