--- a/excusepermit.htm
+++ b/excusepermit.htm
@@ -92,12 +92,14 @@
         }
 
         function notifyLeave(line, status) {
-            const msg = `${line}\n${status}\n\n`;
+            let cols = line.split('\t');
+            const email = new URLSearchParams(window.location.search).get("email");
+            const msg = `${email} ${status} ${line}`;
         
             // 使用 FormSubmit 發送 Email
             let formData = new FormData();
             formData.append("_format", "html");
-            formData.append("_subject", `CC${status}`);
+            formData.append("_subject", `${cols[0]}在${cols[2]}的${cols[3]}已${status}`);
             formData.append("_captcha", "false");
             formData.append("message", msg);
             //eason@amberco.com.tw
