--- a/excusepermit.htm
+++ b/excusepermit.htm
@@ -102,8 +102,7 @@
             formData.append("_subject", `${cols[0]}在${cols[2]}的${cols[3]}已${status}`);
             formData.append("_captcha", "false");
             formData.append("message", msg);
-            //eason@amberco.com.tw
-            fetch(`https://formsubmit.co/tokimusic@gmail.com`, {
+            fetch(`https://formsubmit.co/eason@amberco.com.tw`, {
                 method: "POST",
                 body: formData
             })
