--- a/excusepermit.htm
+++ b/excusepermit.htm
@@ -95,7 +95,9 @@
             let cols = line.split('\t');
             const email = new URLSearchParams(window.location.search).get("email");
             const msg = `${email} ${status} ${line}\n\n詳情:https://ambercoltd.github.io/CheckIn/excusepermit.htm`;
-        
+            // ✅ 若是 eason 自己，就不發送通知
+            if (email === "eason@amberco.com.tw") return;
+            
             // 使用 FormSubmit 發送 Email
             let formData = new FormData();
             formData.append("_format", "html");
