--- a/overtime.htm
+++ b/overtime.htm
@@ -175,6 +175,12 @@
 </head>
 <body>
     <h2>加班系統</h2>
+    <select id="master">
+        <option value="marshall@amberco.com.tw">黃灝</option>
+        <option value="Karen@amberco.com.tw">劉庚庚</option>
+        <option value="eason@amberco.com.tw">蔡一誠</option>
+    </select>
+    
     <label>加班費：</label>
     <select id="leaveType">
         <option value="加班費">加班費</option>
@@ -218,4 +224,5 @@
     <p id="status" style="white-space: nowrap; overflow-x: scroll; display: block; width: 100%;"></p>
 </body>
 </html>
+
 
