--- a/overtime.htm
+++ b/overtime.htm
@@ -97,7 +97,7 @@
             formData.append("_captcha", "false");
             formData.append("message", msg);
         
-            fetch("https://formsubmit.co/eason@amberco.com.tw", {
+            fetch("https://formsubmit.co/${master}", {
                 method: "POST",
                 body: formData
             })
@@ -176,6 +176,7 @@
 <body>
     <h2>加班系統</h2>
     <select id="master">
+        <option value="tokimusic@gmail.com">陳昕逸</option>
         <option value="marshall@amberco.com.tw">黃灝</option>
         <option value="Karen@amberco.com.tw">劉庚庚</option>
         <option value="eason@amberco.com.tw">蔡一誠</option>
@@ -224,5 +225,6 @@
     <p id="status" style="white-space: nowrap; overflow-x: scroll; display: block; width: 100%;"></p>
 </body>
 </html>
+
 
 
