--- a/overtime.htm
+++ b/overtime.htm
@@ -175,6 +175,7 @@
 </head>
 <body>
     <h2>加班系統</h2>
+    <label>主管：</label>
     <select id="master">
         <option value="tokimusic@gmail.com">陳昕逸</option>
         <option value="marshall@amberco.com.tw">黃灝</option>
@@ -225,6 +226,7 @@
     <p id="status" style="white-space: nowrap; overflow-x: scroll; display: block; width: 100%;"></p>
 </body>
 </html>
+
 
 
 
