--- a/overtimepermit.htm
+++ b/overtimepermit.htm
@@ -102,7 +102,7 @@
             formData.append("_subject", `${cols[0]}在${cols[2]}的${cols[3]}已${status}`);
             formData.append("_captcha", "false");
             formData.append("message", msg);
-            fetch(`https://formsubmit.co/tokimusic@gmail.com`, {
+            fetch(`https://formsubmit.co/eason@amberco.com.tw`, {
                 method: "POST",
                 body: formData
             })
@@ -138,6 +138,7 @@
     </table>
 </body>
 </html>
+
 
 
 
