--- a/excusepermit.htm
+++ b/excusepermit.htm
@@ -16,9 +16,11 @@
         const TK = hexToString(TK_HEX);
         const GIST_ID = '340e116e6f80dbdb3cd19887cda79821';
         const GIST_FILE_NAME = 'excuse.txt';
+        const fetchOptions = {};
+        fetchOptions.headers = {"Authorization": `token ${TOKEN}`,"Accept": "application/vnd.github+json"};
 
 		function loadData() {
-			fetch(`https://api.github.com/gists/${GIST_ID}?timestamp=${new Date().getTime()}`)
+			fetch(`https://api.github.com/gists/${GIST_ID}?timestamp=${new Date().getTime()}`,fetchOptions)
 			.then(response => response.json())
 			.then(data => {
 				let content = data.files[GIST_FILE_NAME]?.content || "";
@@ -68,7 +70,7 @@
 
             let newLine = line.trim() + '\t' + status;
 
-            fetch(`https://api.github.com/gists/${GIST_ID}?timestamp=${new Date().getTime()}`)
+            fetch(`https://api.github.com/gists/${GIST_ID}?timestamp=${new Date().getTime()}`,fetchOptions)
             .then(response => response.json())
             .then(data => {
                 let content = data.files[GIST_FILE_NAME]?.content || "";
@@ -140,3 +142,4 @@
     </table>
 </body>
 </html>
+
