--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
         const GIST_FILE_NAME = 'checkin.txt';
         const TK = hexToString(TK_HEX);
 		const fetchOptions = {};
-		fetchOptions.headers = {"Authorization": `token ${TOKEN}`, "Accept": "application/vnd.github+json"};
+		fetchOptions.headers = {"Authorization": `token ${TK}`, "Accept": "application/vnd.github+json"};
 	const ALLOWED_LOCATIONS = [
 	  { name: "台北公司", lat: 24.986794380363925, lon: 121.5336918999006, radiusM: 200 },
 	  { name: "台中辦公室", lat: 24.310777911896015, lon: 120.72138183688088, radiusM: 2000 },
