--- a/excusepermit.htm
+++ b/excusepermit.htm
@@ -17,7 +17,7 @@
         const GIST_ID = '340e116e6f80dbdb3cd19887cda79821';
         const GIST_FILE_NAME = 'excuse.txt';
         const fetchOptions = {};
-        fetchOptions.headers = {"Authorization": `token ${TOKEN}`,"Accept": "application/vnd.github+json"};
+        fetchOptions.headers = {"Authorization": `token ${TK}`,"Accept": "application/vnd.github+json"};
 
 		function loadData() {
 			fetch(`https://api.github.com/gists/${GIST_ID}?timestamp=${new Date().getTime()}`,fetchOptions)
@@ -142,4 +142,5 @@
     </table>
 </body>
 </html>
+
 
