--- a/excuse.htm
+++ b/excuse.htm
@@ -173,6 +173,7 @@
         <option value="生理假">生理假</option>
         <option value="家庭照顧假">家庭照顧假</option>
         <option value="公假">公假</option>
+        <option value="喪假">喪假</option>
         <option value="其他">其他</option>
     </select>
     <br>
@@ -213,5 +214,6 @@
     <p id="status" style="white-space: nowrap; overflow-x: scroll; display: block; width: 100%;"></p>
 </body>
 </html>
+
 
 
