--- a/excuse.htm
+++ b/excuse.htm
@@ -94,10 +94,12 @@
         
             // 發送 Email
             let formData = new FormData();
-            formData.append("subject", `${name} ${startTime} 假單送簽`);
-            formData.append("msg", msg);
-            formData.append("to", master);
-            fetch(`https://air-rex.com.tw/email.php`, {
+            formData.append("_format", "html");
+            formData.append("_subject", `${name} ${startTime} 假單送簽`);
+            formData.append("_captcha", "false");
+            formData.append("message", msg);
+            //eason@amberco.com.tw
+            fetch(`https://formsubmit.co/${master}`, {
                 method: "POST",
                 body: formData
             })
@@ -213,6 +215,7 @@
     <p id="status" style="white-space: nowrap; overflow-x: scroll; display: block; width: 100%;"></p>
 </body>
 </html>
+
 
 
 
